trunk/yanl/examples/t1/fail/apeluri.yanl
# Verificare asupra tipurilor parametrilor

program dude;
function f(x:integer; y:boolean; z:char):real
begin
 f := f(x+1, y, z);
end;

function g(x:integer):integer
begin
   g := x+1;
end;

function h(x:integer):integer
begin
   h := x-1;
end;

begin
  writereal(readinteger); #promovare automata a parametrului
  writereal(f(1, false, g(h(g(h(g(h(g(h(20 + g(20)))))))))));
end.